--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Italian drama'
 - !lcc 'PQ'
+- GITenberg
 title: 'A «San Francisco» : Un atto'
 url: http://www.gutenberg.org/ebooks/35800
